src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>OTR Customer Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Duplicate Case</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Activation_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Activation Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Minutes__c</fullName>
        <formula>IF(IsClosed, (ClosedDate - CreatedDate)*24*60, (Now() - CreatedDate)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audit_Flag__c</fullName>
        <formula>IF(text(Secondary_Reason__c) &lt;&gt; &apos;Junk Email&apos; 
&amp;&amp; Case_Owner_Type__c = &apos;User&apos;
&amp;&amp; RecordType.Name = &apos;Service Operations&apos;
&amp;&amp; IsPickVal(Status, &apos;Closed&apos;) 
&amp;&amp; OR(Owner:User.UserRole.Name = &apos;Correspondence&apos;, Owner:User.UserRole.Name = &apos;eServices&apos;)
&amp;&amp; AND(
Program_Email__c &lt;&gt; &apos;cswexlink@wexinc.com&apos;,
Program_Email__c &lt;&gt; &apos;gsacorrespondence@wexinc.com&apos;,
Program_Email__c &lt;&gt; &apos;gsamcsubmission.gsamc@wexinc.com&apos;,
Program_Email__c &lt;&gt; &apos;mobileapplications@wexinc.com&apos;,
Program_Email__c &lt;&gt; &apos;wexcorporatecard@wexinc.com&apos;,
Program_Email__c &lt;&gt; &apos;onlineservices@tsofleetonline.com&apos;,
Program_Email__c &lt;&gt; &apos;cswol@wexinc.com&apos;
)
,True
,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Browser_Used__c</fullName>
        <label>Browser Used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer</fullName>
                </value>
                <value>
                    <fullName>Edge</fullName>
                </value>
                <value>
                    <fullName>Firefox</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Captures which line of business training hours supported.</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporate Payments</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Global_Fleet</fullName>
                    <label>Global Fleet</label>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>OTR</fullName>
                </value>
                <value>
                    <fullName>PRO</fullName>
                </value>
                <value>
                    <fullName>WES</fullName>
                </value>
                <value>
                    <fullName>WEX Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CS_Agent_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CS Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Placed_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The number the customer called from</inlineHelpText>
        <label>Call Placed From</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Campaign_Program_WF_TXT__c</fullName>
        <description>Used to store text value of Campaign Program formula field.
Text value generated by WFR for use in Sharing Rules/Automation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Program WF TXT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_ID__c</fullName>
        <formula>Account.Carrier_ID__c</formula>
        <label>Carrier ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_History_Owner__c</fullName>
        <formula>If(Owner:Queue.Id &lt;&gt; &quot;&quot;,   Owner:Queue.QueueName ,   Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case History Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Entry_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Entry Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date &amp; Time of Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>CP Departments</description>
        <inlineHelpText>Choose the department the case is relevant to</inlineHelpText>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>I.T</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Correspondence</fullName>
                </value>
                <value>
                    <fullName>CS Helpdesk</fullName>
                </value>
                <value>
                    <fullName>eServices</fullName>
                </value>
                <value>
                    <fullName>Premium Fleet</fullName>
                </value>
                <value>
                    <fullName>Receivables</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Corporate Payments AU Account Management</fullName>
                </value>
                <value>
                    <fullName>Corporate Payments ASIA Account Management</fullName>
                </value>
                <value>
                    <fullName>Corporate Payments Account Management Leadership</fullName>
                </value>
                <value>
                    <fullName>Corporate Payments EU Account Management</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Corporate Payments NA Account Management</fullName>
                </value>
                <value>
                    <fullName>Support Operations</fullName>
                </value>
                <value>
                    <fullName>Salesforce Support</fullName>
                </value>
                <value>
                    <fullName>Portfolio &amp; Risk Operations</fullName>
                </value>
                <value>
                    <fullName>Global Fleet</fullName>
                </value>
                <value>
                    <fullName>Corporate Payments</fullName>
                </value>
                <value>
                    <fullName>Corporate Technology</fullName>
                </value>
                <value>
                    <fullName>Corporate Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>List the exact error message you received</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>List the exact error message you received. There will also be an option to add screenshots on the case summary page.</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>telematics field</description>
        <inlineHelpText>Chevron Only - This should be checked if caller asks to speak to Team Lead or Manager.</inlineHelpText>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fraud_Claim_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fraud Claim Asset</label>
        <referenceTo>Fraud_Purchase_Device__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>Lightning</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Set Up Customization</fullName>
                </value>
                <value>
                    <fullName>Solution Design</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>User Management</fullName>
                </value>
                <value>
                    <fullName>User Permissions</fullName>
                </value>
                <value>
                    <fullName>WEX Network</fullName>
                </value>
                <value>
                    <fullName>WEX SFDC</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Zuora</fullName>
                </value>
                <value>
                    <fullName>Integration Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hierarchy_Setup_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hierarchy Setup Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Macro_Used__c</fullName>
        <description>Macro applied to the Case when it is closed. This field is updated by the macro being run.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Macro applied to the Case when it is closed. This field is updated by the macro being run.</inlineHelpText>
        <label>Macro Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_of_Case__c</fullName>
        <label>Nature of Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issue</fullName>
                    <default>true</default>
                    <label>Issue</label>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Reason__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Detailed_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Servicing Action</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_Level__c</fullName>
        <description>Priority Level (segmentation) as defined for certain partners (e.g., Chevron, Shell).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Priority Level for the account at the time the case was created.</inlineHelpText>
        <label>Priority Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Creation</fullName>
                </value>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Ancillary Products</fullName>
                </value>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Billing/Payment Query</fullName>
                </value>
                <value>
                    <fullName>Bug Major/Outage</fullName>
                </value>
                <value>
                    <fullName>Bug Minor</fullName>
                </value>
                <value>
                    <fullName>Chargebacks</fullName>
                </value>
                <value>
                    <fullName>Complaint - Fund Availablity</fullName>
                </value>
                <value>
                    <fullName>Complaint - Other</fullName>
                </value>
                <value>
                    <fullName>Complaint - Platform</fullName>
                </value>
                <value>
                    <fullName>Complaints</fullName>
                </value>
                <value>
                    <fullName>Complaint - Support</fullName>
                </value>
                <value>
                    <fullName>Complaint - Transaction Processing</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Credit Line</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Internet Redirect</fullName>
                </value>
                <value>
                    <fullName>Junk Email</fullName>
                </value>
                <value>
                    <fullName>MCC</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>No Driver Stranded</fullName>
                </value>
                <value>
                    <fullName>Online Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overcharge</fullName>
                </value>
                <value>
                    <fullName>PAN Request</fullName>
                </value>
                <value>
                    <fullName>Payment &amp; Billing</fullName>
                </value>
                <value>
                    <fullName>Peer Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Program_Email__c</fullName>
        <formula>/*If there is no account, use the Wex Universal info */
If( AccountId = &apos;&apos;, &apos;onlineservices@wexinc.com&apos;,
Account.Program__r.Service_Program_Email__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Program Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Program_Logo__c</fullName>
        <formula>&apos;https://&apos; &amp; $Label.External_Instance_URL &amp; &apos;/creditapplication/servlet/servlet.FileDownload?file=&apos; &amp; Account.Program__r.Logo_Image_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Program Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Program_Name__c</fullName>
        <formula>/*If there is no account, use the Wex Universal info */
If( AccountId = &apos;&apos;, &apos;Wex&apos;,
Account.Program__r.Service_Program_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Program_Phone__c</fullName>
        <formula>/*If there is no account, use the Wex Universal info */
If( AccountId = &apos;&apos;, &apos;800-492-0669&apos;,
Account.Program__r.Service_Program_Phone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Program Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Program_Survey_Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Program Survey Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Program_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set by process builder to indicate if this case has a transactional survey sent</inlineHelpText>
        <label>Service Program Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Program_Website__c</fullName>
        <formula>/*If there is no account, use the Wex Universal info */ 
If( AccountId = &apos;&apos;, &apos;www.wexonline.com&apos;, 
Account.Program__r.Service_Program_Website__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Program Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Survey_Transactional_link__c</fullName>
        <formula>&apos;https://wex.qualtrics.com/jfe/form/SV_7OhB2bSHC2kSuIR?sfCaseid=&apos; &amp; Id &amp; &apos;&amp;sfContactid=&apos;  &amp; ContactId &amp; &apos;&amp;sfOwnerid=&apos;  &amp;  $User.Id  &amp; &apos;&amp;sfSurveyrecordid=0120g000000Hrkc&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Survey Transactional link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <description>List detailed steps taken to reproduce the issue</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>List detailed steps taken to reproduce the issue</inlineHelpText>
        <label>Steps to Reproduce</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SurveyInclusionEsHTML__c</fullName>
        <description>Spanish version of SurveyInclusionHTML.</description>
        <formula>IF(AND(Account_Status__c != &quot;Terminated&quot;, OR(ISBLANK(Account.Program__r.Id),Account.Program__r.Send_CS_Satisfaction_Surveys__c == True)) , BR() &amp; BR() &amp; &quot;&gt;&gt;&gt;&gt; Su satisfacción es importante para nosotros. Le agradeceríamos si pudiera tomarse el tiempo para completar una breve encuesta: &quot; &amp; HYPERLINK(Service_Survey_Transactional_link__c, &quot;Por favor comparte tus comentarios!&quot;) ,&quot;&quot;)</formula>
        <label>SurveyInclusionEsHTML</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyInclusionEsText__c</fullName>
        <description>Spanish version of SurveyInclusionText</description>
        <formula>IF(AND(Account_Status__c != &quot;Terminated&quot;, OR(ISBLANK(Account.Program__r.Id),Account.Program__r.Send_CS_Satisfaction_Surveys__c == True)) , &quot;&gt;&gt;&gt;&gt; Su satisfacción es importante para nosotros. Le agradeceríamos si pudiera tomarse el tiempo para completar una breve encuesta: Por favor comparte tus comentarios!&quot; &amp; MID($Label.Newline,2,1) &amp; Service_Survey_Transactional_link__c ,&quot;&quot;)</formula>
        <label>SurveyInclusionEsText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyInclusionFrHTML__c</fullName>
        <description>French version of SurveyInclusionHTML</description>
        <formula>IF(AND(Account_Status__c != &quot;Terminated&quot;, OR(ISBLANK(Account.Program__r.Id),Account.Program__r.Send_CS_Satisfaction_Surveys__c == True)) , BR() &amp; BR() &amp; &quot;&gt;&gt;&gt;&gt; Votre satisfaction nous importe beaucoup. Nous vous serions reconnaissants de bien vouloir remplir ce petit &quot; &amp; HYPERLINK(Service_Survey_Transactional_link__c, &quot;questionnaire et de partager vos commentaires.&quot;) ,&quot;&quot;)</formula>
        <label>SurveyInclusionFrHTML</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyInclusionFrText__c</fullName>
        <description>French version of SurveyInclusionText</description>
        <formula>IF(AND(Account_Status__c != &quot;Terminated&quot;, OR(ISBLANK(Account.Program__r.Id),Account.Program__r.Send_CS_Satisfaction_Surveys__c == True)) , &quot;&gt;&gt;&gt;&gt; Votre satisfaction nous importe beaucoup. Nous vous serions reconnaissants de bien vouloir remplir ce petit questionnaire et de partager vos commentaires en cliquant sur le lien suivant:&quot; &amp; MID($Label.Newline,2,1) &amp; Service_Survey_Transactional_link__c ,&quot;&quot;)</formula>
        <label>SurveyInclusionFrText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyInclusionHTML__c</fullName>
        <description>HTML version of survey inclusion text</description>
        <formula>IF(AND(Account_Status__c != &quot;Terminated&quot;, OR(ISBLANK(Account.Program__r.Id),Account.Program__r.Send_CS_Satisfaction_Surveys__c == True)) ,   BR() &amp;  BR()   &amp; $Setup.ServiceOperationsSurveySettings__c.Survey_Text__c &amp; &quot; &quot; &amp; HYPERLINK(Service_Survey_Transactional_link__c, &quot;Please share your feedback!&quot;) ,&quot;&quot;)</formula>
        <inlineHelpText>Only appears in HTML template when conditions are met</inlineHelpText>
        <label>SurveyInclusionHTML</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyInclusionText__c</fullName>
        <description>Text to automatically be included in Text email template if survey is sent.</description>
        <formula>IF(AND(Account_Status__c != &quot;Terminated&quot;, OR(ISBLANK(Account.Program__r.Id),Account.Program__r.Send_CS_Satisfaction_Surveys__c == True)) ,  $Setup.ServiceOperationsSurveySettings__c.Survey_Text__c &amp; &quot; &quot; &amp;  $Setup.ServiceOperationsSurveySettings__c.Survey_Text_Plaintext_Extension__c  &amp;  MID($Label.Newline,2,1)  &amp; Service_Survey_Transactional_link__c ,&quot;&quot;)</formula>
        <label>SurveyInclusionText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <description>Is there a current workaround in place</description>
        <inlineHelpText>Is there a current workaround in place</inlineHelpText>
        <label>Workaround</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_2019_Training_Parent_Cases</fullName>
        <booleanFilter>1 AND (2 AND 3) And 4</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Facilitator__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Global_Sales_Ops_Support</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>startsWith</operation>
            <value>2019</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>Parent case</value>
        </filters>
        <filters>
            <field>Estimated_Start_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>*All 2019 Training Parent Cases</label>
        <sharedTo>
            <group>Global_Sales_Operations</group>
            <group>Global_Training_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CS_Training_Cases_2019</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>User__c</columns>
        <columns>Facilitator__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Estimate_Hours__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Department__c</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Customer Service</value>
        </filters>
        <filters>
            <field>Estimated_Start_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Global_Sales_Ops_Support</value>
        </filters>
        <label>*All CS Training  Cases 2019</label>
        <language>en_US</language>
        <sharedTo>
            <group>Global_Sales_Operations</group>
            <group>Global_Training_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Corporate_Payment_Assigned</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6) AND 7</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Department__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Service_Operations</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Corporate Payments EU Account Management</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Corporate Payments NA Account Management</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Corporate Payments AU Account Management</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Corporate Payments ASIA Account Management</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Corporate Payments</value>
        </filters>
        <label>All Corporate Payments Assigned</label>
        <sharedTo>
            <group>Virtual_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Corporate_Payments_Unassigned</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6) AND 7</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Department__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Service_Operations</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Corporate Payments EU Account Management</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Corporate Payments NA Account Management</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Corporate Payments AU Account Management</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Corporate Payments ASIA Account Management</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Corporate Payments</value>
        </filters>
        <label>All Corporate Payments Unassigned</label>
        <sharedTo>
            <group>Virtual_Users</group>
        </sharedTo>
    </listViews>
</CustomObject>